--- a/.gitignore
+++ b/.gitignore
@@ -395,3 +395,9 @@ TimeTrees/timeline.csv
 TimeTrees/timeline.json
 
 ExternalSort/ExternalSort.sln
+
+ExternalSort/Merge.txt
+
+ExternalSort/MultipathMergeA.txt
+
+*.txt
